# ScanSewing_Final

./: README.md
scan_sewing_gui/: CMakeLists.txt  package.xml
scan_sewing_gui/include/scan_sewing_gui/: main_window.hpp  qnode.hpp
scan_sewing_gui/resources/: images.qrc
scan_sewing_gui/src/: main.cpp  main_window.cpp  qnode.cpp
scan_sewing_gui/ui/: main_window.ui
scan_sewing_launch/: CMakeLists.txt  package.xml
scan_sewing_launch/launch/: scan_sewing_machine.launch
scan_sewing_led_control/led_control/: led_control.ino
scan_sewing_mini/: CMakeLists.txt  package.xml  pathFile.txt  path_backlash10only.txt  preset_path_00.csv  preset_path_00.txt  preset_path_01.csv  preset_path_01.txt  preset_path_02.csv  preset_path_02.txt  test.csv
scan_sewing_mini/include/scan_sewing_mini/: SerialPort.h  config.h  main.hpp  motor.hpp
scan_sewing_mini/include/scan_sewing_mini/fastech/: FAS_EziMOTIONPlusE.h  MOTION_DEFINE.h  MOTION_EziMotionLink2_DEFINE.h  MOTION_EziMotionLink_DEFINE.h  MOTION_EziSERVO2_86_DEFINE.h  MOTION_EziSERVO2_DEFINE.h  MOTION_EziSERVO2_TO_DEFINE.h  MOTION_EziSERVO_ADC_DEFINE.h  MOTION_EziSERVO_ALL_28_DEFINE.h  MOTION_EziSERVO_ALL_28_V2_DEFINE.h  MOTION_EziSERVO_ALL_ABS_DEFINE.h  MOTION_EziSERVO_ALL_DEFINE.h  MOTION_EziSERVO_DEFINE.h  MOTION_EziSERVO_mini_DEFINE.h  (+5 more)
scan_sewing_mini/path file/: pathFile_TRBD.txt  pathFile_X_600Random_nph.txt  pathFile_X_600Random_ph.txt  pathFile_X_600Random_ph_comp.txt  pathFile_Y_600random_ph_comp_v2.txt  pathFile_comp_ph.txt  pathFile_nocomp_nph.txt  pathFile_nocomp_ph.txt  pathFile_nostepcomp_notravelcomp_ph.txt  pathFile_nostepcomp_ph.txt  pathFile_stepdistance_comp.txt  pathFile_y_600random_ph_comp_v3.txt  pathFile_y_600random_ph_comp_v4.txt
scan_sewing_mini/path file/241205/: path_backlash10_comp.txt  path_backlash20_comp.txt  path_backlash20only.txt
scan_sewing_mini/path file/241209/: path_y_backlash10.txt  path_y_backlash20.txt
scan_sewing_mini/path file/241212/: X_PC10.txt  X_PC20.txt  X_PNC.txt  Y_PC10.txt  Y_PNC.txt  y_pc20.txt
scan_sewing_mini/path_data/: pathFile_241028_random_X_nph_ncomp.txt  pathFile_241028_random_X_ph_comp.txt  pathFile_241028_random_Y_nph_ncomp.txt  pathFile_241028_random_Y_ph_comp.txt  pathFile_241029_random_X_ph_ncomp.txt  pathFile_241031_random_Y_ph_ncomp.txt
scan_sewing_mini/src/: encoderMonitor.cpp  main.cpp  motor.cpp  test.cpp
scan_sewing_mini/src/temp/: main.cpp  motor.cpp
scan_sewing_panel/panel/: panel.ino
scan_sewing_pf/: CMakeLists.txt  package.xml
scan_sewing_pf/include/scan_sewing_pf/: SerialPort.h  main.h
scan_sewing_pf/src/: SerialPort.cpp  main.cpp
scan_sewing_ssm/: CMakeLists.txt  package.xml
scan_sewing_ssm/cmdline/: SL_Final.txt  SL_Final2.txt  SL_Final_sample.txt  textboxbuffer.56K  textboxbuffer.MAP  textboxbuffer.PMA  textboxbuffer.TBL  textboxbuffer.txt
scan_sewing_ssm/include/scan_sewing_ssm/: ADDRESS.H  BUS.H  Bintoken.h  Common.h  ConfigureCom.h  ConfigureEthernet.h  ConfigureISA.h  DPROTLIB.H  DPRRealT.h  DownloadFirmwareDlg.h  Dprbkg.h  INTR.H  InterruptTask.h  MCSTRUCT.H  Mckernel.h  PMACERR.H  PMACUTIL.H  PRIVATE.H  Pmac.def  Pmac.h  PmacSock.h  Pmacu.h  REGISTRY.H  SelectAvailablePmac.h  SelectCommType.h  SelectDevice.h  Serial.H  SetupMtr.h  SewingMachine.h  Soclbioctl.h  StdAfx.h  UtilDT.h  Vendcmds.H  Version.h  atlconv.h  atlstr.h  cmplc56k.h  cmplclib.h  configuredpr.h  devioctl.h  (+14 more)
scan_sewing_ssm/ini/: SystemParameter.ini
scan_sewing_ssm/src/: Runtime.cpp  SewingMachine.cpp
scan_sewing_vision/: CMakeLists.txt  package.xml
scan_sewing_vision/calibration_data/: CB_data.txt
scan_sewing_vision/scripts/: vision_node.py  vision_node_backup.py
(+2 files in other folders)
