<?xml version="1.0"?>
<package>
  <name>scan_sewing_ssm</name>
  <version>0.0.0</version>
  <description>The scan_sewing_ssm package</description>


  <maintainer email="chw@gmail.com">chw</maintainer>



  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

  </export>
</package>
